naver서치어드바이저

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+  <meta name="naver-site-verification" content="3e1bb048285aee415bdaaa18c964e40a0c7c3e4c" />
   <title>
 		{%if page.title %}
 			{{ page.title }} - {{ site.title }}
