카테고리 수정

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -18,10 +18,10 @@
           <a class="nav-link" href="{{ "/posts" | relative_url }}">전체 글</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ "/category/interview" | relative_url }}">인터뷰</a>
+          <a class="nav-link" href="{{ "/category/interview" | relative_url }}">Interview</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ "/category/review/" | relative_url }}">리뷰</a>
+          <a class="nav-link" href="{{ "/category/review/" | relative_url }}">Review</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{"/contact" | relative_url }}">Contact</a>
