--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,16 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="naver-site-verification" content="3e1bb048285aee415bdaaa18c964e40a0c7c3e4c" />
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162010974-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-162010974-1');
+</script>
+
   <title>
 		{%if page.title %}
 			{{ page.title }} - {{ site.title }}
