--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,6 +22,15 @@ layout: default
         </div>
       </div>
     </div>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-162010974-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-162010974-1');
+</script>
   </header>
 
   <article id="post-content">
