--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -56,6 +56,19 @@ layout: default
         </div>
       </div>
     </div>
+    <script>
+
+  var clickEvent = function () {
+   gtag(‘event’, ‘보기’ {‘event_category’ : ‘글보기’, ‘event_label’ : “page.title()”});
+  }
+
+  var page title =page.title();
+  page.title.addEventListener('click',clickEvent);
+
+
+
+  </script>
+
   </article>
 
   <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false">
