--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -59,13 +59,8 @@ layout: default
     <script>
 
   var clickEvent = function () {
-   gtag(‘event’, ‘보기’ {‘event_category’ : ‘글보기’, ‘event_label’ : “page.title()”});
+   gtag(‘event’, ‘글보기’ {‘event_category’ : ‘보기’, ‘event_label’ : “page.title()”});
   }
-
-  var page title =page.title();
-  page.title.addEventListener('click',clickEvent);
-
-
 
   </script>
 
