--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -63,9 +63,9 @@ layout: default
         'event_label':{{page.title}}});
      }
 
-     var event_label = document.querySelector('#page.title');
+     var event_label = document.querySelector('#post-heading');
 
-     downloadButton.addEventListener('click',clickEvent);
+     event_label.addEventListener('click',clickEvent);
   </script>
 
   </article>
