--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -65,7 +65,7 @@ layout: default
    }
 
    var page.title = document.querySelector('#post-heading');
-   event_label.addEventListener('click',clickEvent);
+   page.title.addEventListener('click',clickEvent);
   </script>
 
   <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false">
