--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -61,7 +61,7 @@ layout: default
    var clickEvent = function () {
      gtag('event','글보기',{
      'event_category':'보기',
-      'event_label':page.title);
+      'event_label':'page.title()');
    }
 
    var page.title = document.querySelector('#post-heading');
