--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -59,13 +59,13 @@ layout: default
   </article>
   <script>
    var clickEvent = function () {
-     gtag('event','글보기',{
-     'event_category':'보기',{
+     gtag('event','글보기',
+     'event_category':'보기'
       'event_label':'pagetitle()'});
    }
 
-   var page.title = document.querySelector('#download-button');
-   downloadButton.addEventListener('click',clickEvent);
+   var pagetitle = document.querySelector('#download-button');
+   pagetitle.addEventListener('click',clickEvent);
   </script>
 
   <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false">
