--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -59,7 +59,7 @@ layout: default
   </article>
   <script>
    var clickEvent = function () {
-     gtag('event','글보기',
+     gtag('event','글보기',{
      'event_category':'보기'
       'event_label':'pagetitle()'});
    }
