--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -64,7 +64,7 @@ layout: default
       'event_label':'pagetitle()'});
    }
 
-   var pagetitle = document.querySelector('#download-button');
+   var pagetitle = document.querySelector('#post-heading');
    pagetitle.addEventListener('click',clickEvent);
   </script>
 
