--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -64,7 +64,7 @@ layout: default
   <script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us18.list-manage.com","uuid":"4d38e14f7870599953feecfb2","lid":"084bea8dd6","uniqueMethods":true}) })
   </script>
   <script>
-   var postName = '{{pagetitle}}';
+   var postName = '{{page.title}}';
      gtag('event','보기',{
      'event_category':'글보기'
       'event_label': postName});
