--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -61,13 +61,15 @@ gtag('config', 'UA-162010974-1');
 
   <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false">
   </script>
-  <script>
-   var postName = '{{ page.title }}' ;
-     gtag('event','보기',{
-     'event_category':'글보기'
-      'event_label': postName});
+  
+    <script>
+      var postName = '{{ post.title }}';
+      gtag('event','보기'{
+        'event_category':'글보기',
+        'event_label':postName});
 
-  </script>
+    </script>
+
   <script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us18.list-manage.com","uuid":"4d38e14f7870599953feecfb2","lid":"084bea8dd6","uniqueMethods":true}) })
   </script>
 
