--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -61,10 +61,10 @@ gtag('config', 'UA-162010974-1');
 
   <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false">
   </script>
-  
+
     <script>
       var postName = '{{ post.title }}';
-      gtag('event','보기'{
+      gtag('event':'보기',{
         'event_category':'글보기',
         'event_label':postName});
 
