--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -64,7 +64,7 @@ gtag('config', 'UA-162010974-1');
 
     <script>
       var postName = '{{ post.title }}';
-      gtag('event':'보기',{
+      gtag('event','보기',{
         'event_category':'글보기',
         'event_label':'postName'});
 
