--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -67,8 +67,7 @@ gtag('config', 'UA-162010974-1');
     var postName = '{{ page.title }}';
     gtag('event', '보기', {
     'event_category': '글보기',
-    'event_label': postName
-  });
+    'event_label': postName});
   </script>
 
 {% include disqus.html %}
