--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,7 +29,21 @@ layout: default
 
     gtag('config', 'UA-162010974-1');
     </script>
-
+    <script>
+      !function(f,b,e,v,n,t,s)
+      {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+      n.queue=[];t=b.createElement(e);t.async=!0;
+      t.src=v;s=b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t,s)}(window, document,'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+      fbq('init', '345110119812685');
+      fbq('track', 'PageView');
+    </script>
+    <script>
+  fbq('track', 'ViewContent');
+</script>
   </header>
 
   <article id="post-content">
