--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -86,5 +86,7 @@ layout: default
     'event_category': '글보기',
     'event_label': postName });
   </script>
-
+  <script>
+    fbq('track', 'ViewContent');
+  </script>
 {% include disqus.html %}
