--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -71,8 +71,7 @@ layout: default
   </script>
   <script>
 
-  var ViewContent = function () {
-  fbq('trackCustom',{ content_name : {{ page.title }},
+  fbq('trackCustom',{ content_name : '{{ page.title }}'
 });
   }
 </script>
