--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -71,7 +71,8 @@ layout: default
   </script>
   <script>
 
-  fbq('trackCustom',{ content_name : '{{ page.title }}'
+  fbq('track','ViewContent'
+  { content_name : '{{ page.title }}'
 });
   }
 </script>
