--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -71,7 +71,7 @@ layout: default
   </script>
   <script>
 
-  fbq('track','ViewContent'
+  fbq('track','ViewContent',
   { content_name : '{{ page.title }}'
 });
   }
