--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -71,8 +71,8 @@ layout: default
   </script>
   <script>
 
-  fbq('track','ViewContent',
-  { content_name : '{{ page.title }}'
+  fbq('track','viewcontent',{
+     content_name : '{{ page.title }}'
 });
   }
 </script>
