--- a/_includes/head.html
+++ b/_includes/head.html
@@ -105,6 +105,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <!-- End Favicon Tag -->
 </head>
 </script>
+
+<script>
+  dateLayer.push({ 'event' : 'ViewContent',
+    'content_name' : '{{ page.title }}',
+    'content_id' : '{{ page.content_id }}');
+</script>
+
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PLW9VM9"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
