--- a/_includes/head.html
+++ b/_includes/head.html
@@ -111,7 +111,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   dataLayer.push({
     'event' : 'viewcontent',
     'content_name' : '{{ page.title }}',
-    'content_id' : '{{ page.content_id }}'
+    'content_id' : '{{ page.content_ids }}'
   });
 </script>
 
