--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,6 +17,7 @@ layout: default
             <span class="meta">
               {{ page.date | date: '%B %d, %Y' }} &middot; {% include read_time.html
               content=page.content %}
+
             </span>
           </div>
         </div>
@@ -56,5 +57,14 @@ layout: default
   </script>
   <script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us18.list-manage.com","uuid":"4d38e14f7870599953feecfb2","lid":"084bea8dd6","uniqueMethods":true}) })
   </script>
+  <script>
+
+    dataLayer.push({
+      'event' : 'viewcontent',
+      'content_name' : '{{ page.title }}',
+      'content_ids' : '{{ page.content_ids }}'
+    });
+  </script>
+
 
 {% include disqus.html %}
