--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -33,11 +33,12 @@ layout: default
     </div>
   </div>
 
-  <script>
-
+    <script type="text/javascript">
+     $('#page').ViewContent(function() {
     dataLayer.push({
       'event' : 'ViewContent',
       'content_name' : '{{ page.title }}',
       'content_ids' : '{{ page.content_ids }}'
     });
+  }
   </script>
