--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,6 +21,7 @@ layout: default
         </div>
       </div>
     </div>
+    <script data-ad-client="ca-pub-4754436714988955" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </header>
 
   <div class="container">
