--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -23,6 +23,9 @@
         <li class="nav-item">
           <a class="nav-link" href="{{ "/category/review/" | relative_url }}">review</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ "/category/review/" | relative_url }}">essay</a>
+        </li>
       </ul>
     </div>
   </div>
