--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -24,7 +24,7 @@
           <a class="nav-link" href="{{ "/category/review/" | relative_url }}">review</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ "/category/review/" | relative_url }}">essay</a>
+          <a class="nav-link" href="{{ "/category/essay/" | relative_url }}">essay</a>
         </li>
       </ul>
     </div>
